<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/home"
            style="@style/CategoryLinks"
            android:background="@color/category_home"
            android:text="@string/home" />
        <TextView
            android:id="@+id/library"
            style="@style/CategoryLinks"
            android:background="@color/category_library"
            android:text="@string/library" />
        <TextView
            android:id="@+id/nowPlaying"
            style="@style/CategoryLinks"
            android:background="@color/category_now_playing"
            android:text="@string/now_playing" />
        <TextView
            android:id="@+id/karooke"
            style="@style/CategoryLinks"
            android:background="@color/category_karooke"
            android:text="@string/karooke" />
        <TextView
            android:id="@+id/radiofm"
            style="@style/CategoryLinks"
            android:background="@color/category_radiofm"
            android:text="@string/radiofm" />
        <TextView
            android:id="@+id/detailInfo"
            style="@style/CategoryLinks"
            android:background="@color/category_detail_info"
            android:text="@string/detail_info" />
        <TextView
            android:id="@+id/buyOnline"
            style="@style/CategoryLinks"
            android:background="@color/category_buy_online"
            android:text="@string/buy_online" />
        <TextView
            android:id="@+id/search"
            style="@style/CategoryLinks"
            android:background="@color/category_search"
            android:text="@string/search" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>